MNEMOSYNE 0.9.8

(Note that for Windows users we recommend uninstalling the previous 
version before doing an upgrade.)

-disable 'edit item' as long as the aswer is not shown, to prevent 
 accidentally revealing it (patch by D. Herrmann).
-fix handling of < inside latex tags (reported by jgurling, patch by N. 
 Kriha)
-fix UTF-8 handling in the Supermemo7 file format (reported by Loco)
-fix corner cases in scheduling algorithm (patch by Querido).
-make button ordering more consistent in add items (reported by N. Kriha).
-fixed handling of multiple latex tags (reported by M. Boespflug).
-don't hang on latex errors (reported by M. Boespflug).
-make tab-separated import resistant to the presence of multiple tabs 
 (reported by J. Forrez).
-fixed hang when end quotes are not present inside a tag.
-fixed regression where the active flag of categories was not respected on
 import (reported by A. Rachmatullah).
-respect left align option in 'preview items' (reported by E. Grannan).
-making saving more robust while Windows is shutting down (fix by Tom).
-various small interface cleanups and fixes.


MNEMOSYNE 0.9.7: 2006-10-27

-multiple items can now be selected in the 'edit items' dialog in order
 to delete them, change their categories, or add their vice versas.
-added option to import text files where question and answer are each on
 their own line.
-again respect window size set by user.
-make delete button work in 'edit items' dialog (reported by J. Forrez).
-worked around oddity (extra first character in text file) when importing 
 Word unicode text files.
-various small interface cleanups and fixes.
-updated documentation on the website.


MNEMOSYNE 0.9.6: 2006-10-07

-added LaTeX support for formulas, e.g. <latex>x^2+y^2=z^2</latex>. For 
 this you need latex and dvipng installed. Windows users can download 
 MiKTeX. (thanks to input from Henrik Skov Midtiby and J. David Lee.)
-added possibility to preview an item. Useful if you work with tags.