@@ -12,8 +12,6 @@ Before 1.0:
 
 -give more feedback on import failure
 
--option to automatically increase font size for non-latin characters 
-
 -unicode filenames? (remove encode, set LANG to UTF-8 in system)
 
 -change file suffix when changing export file format
